--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,6 @@
 {
   "Язык": "English",
-  "Страница не найдена": "Page Not Found"
+  "Страница не найдена": "Page Not Found",
+  "Что то пошло не так": "Something went wrong",
+  "Обновить страницу": "Reload the page"
 }
