--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2,5 +2,8 @@
   "Язык": "Русский",
   "Страница не найдена": "Страница не найдена",
   "Что то пошло не так": "Что то пошло не так",
-  "Обновить страницу": "Обновить страницу"
+  "Обновить страницу": "Обновить страницу",
+  "Короткий язык": "Ру",
+  "Главная": "Главная",
+  "О нас": "О нас"
 }
