--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,5 +2,8 @@
   "Язык": "English",
   "Страница не найдена": "Page Not Found",
   "Что то пошло не так": "Something went wrong",
-  "Обновить страницу": "Reload the page"
+  "Обновить страницу": "Reload the page",
+  "Короткий язык": "En",
+  "Главная": "Main",
+  "О нас": "About us"
 }
