--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,5 +5,6 @@
   "Обновить страницу": "Reload the page",
   "Короткий язык": "En",
   "Главная": "Main",
-  "О нас": "About us"
+  "О нас": "About us",
+  "Войти": "Login"
 }
