--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -5,5 +5,6 @@
   "Обновить страницу": "Обновить страницу",
   "Короткий язык": "Ру",
   "Главная": "Главная",
-  "О нас": "О нас"
+  "О нас": "О нас",
+  "Войти": "Войти"
 }
