add ddLoginForm feature and Input component, pre comit hooks

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -6,5 +6,7 @@
   "Короткий язык": "En",
   "Главная": "Main",
   "О нас": "About us",
-  "Войти": "Login"
+  "Войти": "Login",
+  "Введите username": "Enter username",
+  "Введите пароль": "Enter password"
 }
