--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -6,5 +6,7 @@
   "Короткий язык": "Ру",
   "Главная": "Главная",
   "О нас": "О нас",
-  "Войти": "Войти"
+  "Войти": "Войти",
+  "Введите username": "Введите username",
+  "Введите пароль": "Введите пароль"
 }
