--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -7,6 +7,7 @@
   "Главная": "Главная",
   "О нас": "О нас",
   "Войти": "Войти",
+  "Выйти": "Выйти",
   "Введите username": "Введите username",
   "Введите пароль": "Введите пароль"
 }
