--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -7,6 +7,7 @@
   "Главная": "Main",
   "О нас": "About us",
   "Войти": "Login",
+  "Выйти": "Logout",
   "Введите username": "Enter username",
   "Введите пароль": "Enter password"
 }
