add dynamic module loader for async reducers

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -9,5 +9,6 @@
   "Войти": "Login",
   "Выйти": "Logout",
   "Введите username": "Enter username",
-  "Введите пароль": "Enter password"
+  "Введите пароль": "Enter password",
+  "Форма авторизации": "Authorization Form"
 }
