--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -9,5 +9,6 @@
   "Войти": "Войти",
   "Выйти": "Выйти",
   "Введите username": "Введите username",
-  "Введите пароль": "Введите пароль"
+  "Введите пароль": "Введите пароль",
+  "Форма авторизации": "Форма авторизации"
 }
