add profile entity and refactor sidebar

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -6,6 +6,7 @@
   "Короткий язык": "En",
   "Главная": "Main",
   "О нас": "About us",
+  "Профаил": "Profile",
   "Войти": "Login",
   "Выйти": "Logout",
   "Введите username": "Enter username",
