--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -6,6 +6,7 @@
   "Короткий язык": "Ру",
   "Главная": "Главная",
   "О нас": "О нас",
+  "Профаил": "Профаил",
   "Войти": "Войти",
   "Выйти": "Выйти",
   "Введите username": "Введите username",
