--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -11,5 +11,7 @@
   "Выйти": "Выйти",
   "Введите username": "Введите username",
   "Введите пароль": "Введите пароль",
-  "Форма авторизации": "Форма авторизации"
+  "Форма авторизации": "Форма авторизации",
+  "Укажите валюту": "Укажите валюту",
+  "Укажите страну": "Укажите страну"
 }
