--- a/public/locales/en/articles.json
+++ b/public/locales/en/articles.json
@@ -2,5 +2,6 @@
   "Страница статей": "Articles page",
   "Страинца статьи": "Article page",
   "Статья не найдена": "Article not found",
-  "Произошла ошибка при закгрузке статьи": "Error happened while article was loading..."
+  "Произошла ошибка при закгрузке статьи": "Error happened while article was loading...",
+  "Комментарии": "Comments"
 }
