--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -13,5 +13,6 @@
   "Введите пароль": "Enter password",
   "Форма авторизации": "Authorization Form",
   "Укажите валюту": "Select currency",
-  "Укажите страну": "Select country"
+  "Укажите страну": "Select country",
+  "Комметнарии отсутствуют": "No comments"
 }
