--- a/public/locales/ru/articles.json
+++ b/public/locales/ru/articles.json
@@ -2,5 +2,6 @@
   "Страница статей": "Страница статей",
   "Страинца статьи": "Страинца статьи",
   "Статья не найдена": "Статья не найдена",
-  "Произошла ошибка при закгрузке статьи": "Произошла ошибка при закгрузке статьи"
+  "Произошла ошибка при закгрузке статьи": "Произошла ошибка при закгрузке статьи",
+  "Комментарии": "Комментарии"
 }
