--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -13,5 +13,6 @@
   "Введите пароль": "Введите пароль",
   "Форма авторизации": "Форма авторизации",
   "Укажите валюту": "Укажите валюту",
-  "Укажите страну": "Укажите страну"
+  "Укажите страну": "Укажите страну",
+  "Комметнарии отсутствуют": "Комметнарии отсутствуют"
 }
