--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -14,5 +14,7 @@
   "Форма авторизации": "Authorization Form",
   "Укажите валюту": "Select currency",
   "Укажите страну": "Select country",
-  "Комметнарии отсутствуют": "No comments"
+  "Комметнарии отсутствуют": "No comments",
+  "Введите текст комментария": "Enter comment",
+  "Отправить": "Send"
 }
