--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -14,5 +14,7 @@
   "Форма авторизации": "Форма авторизации",
   "Укажите валюту": "Укажите валюту",
   "Укажите страну": "Укажите страну",
-  "Комметнарии отсутствуют": "Комметнарии отсутствуют"
+  "Комметнарии отсутствуют": "Комметнарии отсутствуют",
+  "Введите текст комментария": "Введите текст комментария",
+  "Отправить": "Отправить"
 }
