add article list

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -16,5 +16,6 @@
   "Укажите страну": "Укажите страну",
   "Комметнарии отсутствуют": "Комметнарии отсутствуют",
   "Введите текст комментария": "Введите текст комментария",
-  "Отправить": "Отправить"
+  "Отправить": "Отправить",
+  "Читать далее...": "Читать далее..."
 }
