--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -16,5 +16,6 @@
   "Укажите страну": "Select country",
   "Комметнарии отсутствуют": "No comments",
   "Введите текст комментария": "Enter comment",
-  "Отправить": "Send"
+  "Отправить": "Send",
+  "Читать далее...": "Read More..."
 }
