add articles list for articles page

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -17,5 +17,6 @@
   "Комметнарии отсутствуют": "No comments",
   "Введите текст комментария": "Enter comment",
   "Отправить": "Send",
-  "Читать далее...": "Read More..."
+  "Читать далее...": "Read More...",
+  "Назад к списку": "Back to list"
 }
