--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -17,5 +17,6 @@
   "Комметнарии отсутствуют": "Комметнарии отсутствуют",
   "Введите текст комментария": "Введите текст комментария",
   "Отправить": "Отправить",
-  "Читать далее...": "Читать далее..."
+  "Читать далее...": "Читать далее...",
+  "Назад к списку": "Назад к списку"
 }
