--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -18,5 +18,6 @@
   "Введите текст комментария": "Enter comment",
   "Отправить": "Send",
   "Читать далее...": "Read More...",
-  "Назад к списку": "Back to list"
+  "Назад к списку": "Back to list",
+  "Поиск": "Search"
 }
