--- a/public/locales/ru/articles.json
+++ b/public/locales/ru/articles.json
@@ -3,5 +3,12 @@
   "Страинца статьи": "Страинца статьи",
   "Статья не найдена": "Статья не найдена",
   "Произошла ошибка при закгрузке статьи": "Произошла ошибка при закгрузке статьи",
-  "Комментарии": "Комментарии"
+  "Комментарии": "Комментарии",
+  "дате": "дате",
+  "названию": "названию",
+  "просмотрам": "просмотрам",
+  "возрастанию": "возрастанию",
+  "убыванию": "убыванию",
+  "Сортировать по": "Сортировать по",
+  "По": "По"
 }
