--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -18,5 +18,6 @@
   "Введите текст комментария": "Введите текст комментария",
   "Отправить": "Отправить",
   "Читать далее...": "Читать далее...",
-  "Назад к списку": "Назад к списку"
+  "Назад к списку": "Назад к списку",
+  "Поиск": "Поиск"
 }
